--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,9 @@ img {
    height: 200px;
 
 }
+.greeting {
+ text-align: center;   
+}
 @media (max-width: 768px) {
     .column {
         flex: 100%;
